# sc_estimator

./: CMakeLists.txt  package.xml
include/: estimator.h  simulator.h
src/: estimator.cpp  scEstimatorNode.cpp  simulator.cpp
